--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -43,7 +43,7 @@ module-margin-left = 1
 module-margin-right = 1
 modules-left = i3
 modules-center = date
-;modules-right = pulseaudio backlight-acpi wlan eth teth battery arrow
+;modules-right = pulseaudio backlight-acpi wlan eth teth battery arrow script
 modules-right = pulseaudio backlight-acpi battery
 
 font-0 = "Source Code Pro:pixelsize=10:antialias=true;2"
@@ -103,23 +103,23 @@ label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
@@ -345,6 +345,5 @@ ramp-capacity-9-foreground = ${self.format-full-underline}
 ;bar-capacity-indicator = ─
 ;bar-capacity-indicator = ─
 ;bar-capacity-indicator-foreground = #55aa55
-
 
 ; vim:ft=dosini
