fix: rename some renamed bash scripts
- Rename `red.sh` to `redshift.sh`
- Rename `polyswitch.sh` to `togglepolybar.sh`
- Rename `touchpad-toggle.sh` to `toggletouchpad.sh`

--- a/i3/config
+++ b/i3/config
@@ -20,8 +20,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id "volfade.sh -i"
 bindsym XF86AudioLowerVolume exec --no-startup-id "volfade.sh -d"
 bindsym XF86MonBrightnessUp exec --no-startup-id "xbacklight -inc 3 -fps 60 -time 111 -perceived"
 bindsym XF86MonBrightnessDown exec --no-startup-id "xbacklight -dec 3 -fps 60 -time 111 -perceived"
-bindsym Shift+XF86MonBrightnessUp exec --no-startup-id "red.sh -r"
-bindsym Shift+XF86MonBrightnessDown exec --no-startup-id "red.sh -s" 
+bindsym Shift+XF86MonBrightnessUp exec --no-startup-id "redshift.sh -r"
+bindsym Shift+XF86MonBrightnessDown exec --no-startup-id "redshift.sh -s" 
 #bindsym XF86Launch2 exec --no-startup-id "kblight && sleep 0.1 && notify-send -e -t 1444 --icon=input-keyboard Keyboard\ light \\"$(kblight -s)\\""
 bindsym $mod+Menu exec --no-startup-id "kblight && sleep 0.1 && notify-send -e -t 1444 --icon=input-keyboard Keyboard\ light \\"$(kblight -s)\\""
 
@@ -34,11 +34,11 @@ bindsym Control+Mod1+Down exec --no-startup-id "xrandr --output LVDS-1 --rotate 
 bindsym $mod+Return exec --no-startup-id "st"
 bindsym $mod+grave exec --no-startup-id "st -g 84x22 -c floating-st"
 bindsym $mod+a exec --no-startup-id "/home/macydnah/.config/rofi/launcher.sh"
-bindsym $mod+b exec --no-startup-id "polyswitch.sh"
+bindsym $mod+b exec --no-startup-id "togglepolybar.sh"
 bindsym $mod+n exec --no-startup-id "networkmanager_dmenu"
 bindsym $mod+s exec --no-startup-id "pavucontrol --tab=3"
 bindsym XF86Display exec --no-startup-id "xset dpms force off"
-bindsym XF86Launch1 exec --no-startup-id "touchpad-toggle.sh"
+bindsym XF86Launch1 exec --no-startup-id "toggletouchpad.sh"
 bindsym Print exec "maim -u -m 10 /home/macydnah/Pictures/$(date +%s).png"
 bindsym Shift+Print exec "maim -u -m 10 -s /home/macydnah/Pictures/$(date +%s).png"
 bindsym $mod+backslash exec --no-startup-id "bluetoothctl info | grep OpenMove &>/dev/null && bluetoothctl disconnect &>/dev/null || bluetoothctl connect 20:74:CF:CB:CA:34 &>/dev/null"
