feat: set `hwdec` to `auto-safe` and new fonts

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,17 +1,13 @@
 #profile=svp
-#profile=gpu-hq
-#scale=ewa_lanczossharp
-#cscale=ewa_lanczossharp
-video-sync=display-resample
-interpolation
-#tscale=oversample
-hwdec=vaapi
+#vo=gpu-next
+hwdec=auto-safe
 ytdl
-#ytdl-format="bestvideo[height<=1080][ext=mp4]+bestaudio/best"
 slang=es,en,en-GB
 save-position-on-quit
 no-audio-display
 pulse-latency-hacks=yes
+sub-font='SF Pro Text'
+osd-font='SF Pro Text'
 
 [svp]
 input-ipc-server=/tmp/mpvsocket     # Receives input from SVP
