--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,162 +1,264 @@
-monitor=,preferred,auto,auto
+# ~/.config/hypr/hyprland.conf
 
+# https://wiki.hyprland.org/Configuring/Keywords/
 $mod = SUPER
-$terminal = st
+$terminal = footclient
+$floatingTerminal = footclient -a floating-foot -e tmux new-session -A -s shession
 $fileManager = pcmanfm
 $menu = /home/macydnah/.config/rofi/launcher.sh
+$bar = togglewaybar.sh
+
+# https://wiki.hyprland.org/Configuring/Monitors/
+#monitor = name, resolution, position, scale, transform, 0
+monitor = ,preferred,auto,auto,transform,0
+monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
 
 exec-once = pcmanfm -d
-exec-once = swaybg --output LVDS-1 --image /usr/share/backgrounds/fgm.png --mode fill
-
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
+exec-once = foot --server
+exec-once = swaybg --output LVDS-1 --mode fill --image /usr/share/backgrounds/fgm.png
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
+env = GDK_BACKEND,wayland
+env = LIBVA_DRIVER_NAME,i965
+env = LIBVA_DRIVERS_PATH,/usr/lib/dri
+env = MOZ_ENABLE_WAYLAND,1
+env = QT_QPA_PLATFORM,wayland-egl
+env = SDL_VIDEODRIVER,wayland
+env = XDG_SESSION_TYPE,wayland
+env = _JAVA_AWT_WM_NONREPARENTING,1
+env = FLOATINGTERM,$floatingTerminal
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
-general { 
+general {
+    border_size = 0
+    no_border_on_floating = true
     gaps_in = 2
     gaps_out = 4
-
-    border_size = 0
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    gaps_workspaces = 40
     col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(97d01add)
     layout = dwindle
+    allow_tearing = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 3
-
-    # Change transparency of focused and unfocused windows
+    rounding = 4
     active_opacity = 1.0
-    inactive_opacity = 1.0
-
+    inactive_opacity = 0.85
     drop_shadow = true
     shadow_range = 4
-    shadow_render_power = 3
+    shadow_render_power = 4
     col.shadow = rgba(1a1a1aee)
+    col.shadow_inactive = rgba(00000000)
+    dim_inactive = false
+    dim_strength = 0.5
+    dim_special = 0.2
+    dim_around = 0.4
+    # screen_shader = /home/macydnah/.config/hypr/blue-light-filter.frag
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 4
         passes = 1
-        
+        ignore_opacity = true
+        xray = true
+        noise = 0.0117
+        contrast = 0.8916
+        brightness = 0.8172
         vibrancy = 0.1696
+        vibrancy_darkness = 0.0
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
+# file:///home/macydnah/.config/hypr/conf.d/bezier.conf
+source = conf.d/bezier.conf
 animations {
     enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    first_launch_animation = false
+    
+    # https://wiki.hyprland.org/Configuring/Animations/
+    animation = windowsIn, 1, 4, overshot
+    animation = windowsOut, 0, 4, default, popin 100%
+    animation = windowsMove, 1, 4, easeOutExpo
+    animation = layersIn, 1, 4, easeInOutBack
+    animation = layersOut, 1, 4, easeOutExpo
+    animation = fade, 1, 4, default
+    animation = fadeIn, 1, 3, easeInBack
+    animation = fadeOut, 1, 2, easeOutExpo
+    animation = fadeSwitch, 1, 2, easeOutExpo
+    animation = fadeShadow, 1, 2, easeOutExpo
+    animation = fadeLayersIn, 1, 4, easeInOutBack
+    animation = fadeLayersOut, 1, 4, easeOutExpo
+    animation = border, 0
+    animation = borderangle, 0
+    animation = workspaces, 1, 6, default, slide
+    #animation = workspacesIn, 1, 6, easeOutBack, slide
+    #animation = workspacesOut, 1, 6, easeOutBack, fade
+    animation = specialWorkspace, 1, 5, overshot, slidevert
 }
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_is_master = true
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-}
-
-
-#############
-### INPUT ###
-#############
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
+    kb_model = pc104
     kb_layout = us
     kb_variant = altgr-intl
-    kb_model = pc104
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    sensitivity = 0.0
+    accel_profile = adaptive
+    force_no_accel = false
+    scroll_method = 2fg
+    follow_mouse = 2
+    off_window_axis_events = 0
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    # https://wiki.hyprland.org/Configuring/Variables/#touchpad
     touchpad {
         natural_scroll = true
+        scroll_factor = 1.3
+        tap_button_map = lrm
+        clickfinger_behavior = false
+        drag_lock = true
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
+    workspace_swipe_min_fingers = true
+    workspace_swipe_distance = 150
+    workspace_swipe_min_speed_to_force = 0
+    workspace_swipe_cancel_ratio = 0.0
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+# https://wiki.hyprland.org/Configuring/Variables/#group
+group {
+    groupbar {
+        enabled = true
+        font_size = 8
+        gradients = true
+        height = 15
+        stacked = false
+        render_titles = true
+        scrolling = false
+        text_color = 0xffffffff
+        col.active = 0x66ffff00
+        col.inactive = 0x66777700
+    }
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc { 
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    font_family = SF Pro Display
+    force_default_wallpaper = -1
+    vfr = false
+    mouse_move_enables_dpms = false
+    key_press_enables_dpms = false
+    animate_manual_resizes = false
+    animate_mouse_windowdragging = false
+    disable_autoreload = false
+    enable_swallow = false
+    mouse_move_focuses_monitor = false
+    background_color = 0x777777
+    new_window_takes_over_fullscreen = 2
+    middle_click_paste = false
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#binds
+binds {
+    allow_workspace_cycles = true
+    window_direction_monitor_fallback = true
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#opengl
+opengl {
+    nvidia_anti_flicker = false
+    force_introspection = 1
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#cursor
+cursor {
+    inactive_timeout = 2
+    hotspot_padding = 5
+    no_warps = true
+    persistent_warps = true
+    zoom_factor = 1.000
+    hide_on_key_press = false
+}
+
+# https://wiki.hyprland.org/Configuring/Dwindle-Layout/
+dwindle {
+    pseudotile = true
+    force_split = 2
+    preserve_split = true
+    no_gaps_when_only = 0
+    use_active_for_splits = true
+
+    bind = $mod, P, pseudo
+    bind = $mod, C, togglesplit
+}
+
+# https://wiki.hyprland.org/Configuring/Master-Layout/
+master {
+    new_status = master
+}
 
 ####################
-### KEYBINDINGSS ###
+### KEYBINDINGS  ###
 ####################
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# https://wiki.hyprland.org/Configuring/Binds/
+
+# Volume/Brightness Control
+bind = ,XF86AudioMute, exec, volfade.sh -m
+bind = ,XF86AudioRaiseVolume, exec, volfade.sh -i
+bind = ,XF86AudioLowerVolume, exec, volfade.sh -d
+bind = $mod, XF86AudioRaiseVolume, exec, pavucontrol --tab=3
+bind = $mod, XF86AudioLowerVolume, exec, pavucontrol --tab=3
+binde = ,XF86MonBrightnessUp, exec, xbacklight -inc 3 -fps 60 -time 111 -perceived
+binde = ,XF86MonBrightnessDown, exec, xbacklight -dec 3 -fps 60 -time 111 -perceived
+bind = SHIFT, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader ' '
+bind = SHIFT, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader /home/macydnah/.config/hypr/blue-light-filter.frag
+bind = $mod, XF86MonBrightnessUp, exec, hyprctl dispatch dpms on
+bind = $mod, XF86MonBrightnessDown, exec, hyprctl dispatch dpms off
+bind = $mod, Menu, exec, kblight
+
+# Keybinds/shortcuts for applications
 bind = $mod, Return, exec, $terminal
-bind = $mod, Q, killactive,
-bind = $mod SHIFT, Escape, exit,
-bind = $mod, E, exec, $fileManager
-bind = $mod, space, togglefloating,
+bind = $mod, grave, exec, togglescrat.sh
 bind = $mod, A, exec, $menu
-bind = $mod, P, pseudo, # dwindle
-bind = $mod, C, togglesplit, # dwindle
+bind = $mod, B, exec, $bar
+bind = $mod, E, exec, $fileManager
+bind = $mod, N, exec, networkmanager_dmenu
 
-# Move focus with mod + arrow keys
+# Window manager functions
+bind = $mod, Q, killactive
+bind = $mod, F, fullscreen, 0
+bind = $mod, Tab, workspace, previous
+bind = $mod, space, togglefloating,
+bind = $mod, X, exec, togglehyprtab.sh 
+bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
+
+# Navigation
 bind = $mod, J, movefocus, l
 bind = $mod, semicolon, movefocus, r
 bind = $mod, K, movefocus, u
 bind = $mod, L, movefocus, d
+bind = $mod SHIFT, J, movewindow, l
+bind = $mod SHIFT, semicolon, movewindow, r
+bind = $mod SHIFT, K, movewindow, u
+bind = $mod SHIFT, L, movewindow, d
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
 
-# Switch workspaces with mod + [0-9]
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
@@ -168,7 +270,6 @@ bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
 bind = $mod, 0, workspace, 10
 
-# Move active window to a workspace with mod + SHIFT + [0-9]
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
@@ -179,31 +280,77 @@ bind = $mod SHIFT, 7, movetoworkspace, 7
 bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, 0, movetoworkspace, 10
+bind = $mod SHIFT, grave, movetoworkspace, special:magic
 
-# Example special workspace (scratchpad)
-bind = $mod, S, togglespecialworkspace, magic
-bind = $mod SHIFT, S, movetoworkspace, special:magic
+#############
+### RULES ###
+#############
 
-# Scroll through existing workspaces with mod + scroll
-bind = $mod, mouse_down, workspace, e+1
-bind = $mod, mouse_up, workspace, e-1
+# https://wiki.hyprland.org/Configuring/Window-Rules/#rules
+# https://wiki.hyprland.org/Configuring/Window-Rules/#layer-rules
+# https://wiki.hyprland.org/Configuring/Workspace-Rules/#workspace-rules
 
-# Move/resize windows with mod + LMB/RMB and dragging
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
+#workspace = special:magic,bordersize:2
+windowrulev2 = suppressevent maximize,class:.*
+layerrule = animation slide,waybar
 
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+# floating-foot
+windowrulev2 = workspace special:magic,class:^(floating-foot)$
+windowrulev2 = size 677 382,class:^(floating-foot)$
+windowrulev2 = float,class:^(floating-foot)$
+windowrulev2 = pseudo,class:^(floating-foot)$
+windowrulev2 = tile,class:^(floating-foot)$
+#windowrulev2 = bordercolor rgb(97d01a),class:^(floating-foot)$
+#windowrulev2 = bordersize 2,class:^(floating-foot)$
+#windowrulev2 = dimaround 0,class:^(floating-foot)$
+windowrulev2 = noshadow 1,class:^(floating-foot)$
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+# mpv
+windowrulev2 = noblur 1,class:^(mpv)$
+windowrulev2 = nodim 1,class:^(mpv)$
+windowrulev2 = noshadow 1,class:^(mpv)$
+windowrulev2 = opaque 1,class:^(mpv)$
+windowrulev2 = forcergbx 1,class:^(mpv)$
+windowrulev2 = immediate 1, class:^(mpv)$
+windowrulev2 = xray 0,class:^(mpv)$
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
+# swayimg
+windowrulev2 = immediate 1, class:^(swayimg)$
 
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# rofi
+layerrule = blur,rofi
+#layerrule = ignorealpha 0,rofi
+layerrule = ignorezero,rofi
+layerrule = dimaround,rofi
+layerrule = xray 1,rofi
+layerrule = animation popin,rofi
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# scrcpy
+windowrulev2 = float,class:^(scrcpy)$,title:^(SM-G935F)$
+windowrulev2 = size 32% 99%,class:^(scrcpy)$,title:^(SM-G935F)$
+windowrulev2 = tile,class:^(scrcpy)$,title:^(SM-G935F)$
+windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
+
+# V4L2 Viewer
+#windowrulev2 = opaque,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = forcergbx,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = noblur,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = nodim,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = noshadow,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = xray off,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = float,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = pseudo,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+#windowrulev2 = tile,class:^(qvidcap)$,title:^(V4L2 Viewer)$
+windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+
+# vim: ft=hypr tabstop=4 shiftwidth=4 expandtab ai
