refactor(dotter): init global configs to my needs

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,10 +1,10 @@
-[helpers]
+[settings]
+default_target_type = "symbolic"
 
 [default]
 depends = []
 
 [default.files]
-LICENSE = ""
 hypr = ""
 i3 = ""
 mpv = ""
@@ -12,8 +12,3 @@ mpv = ""
 polybar = ""
 procps = ""
 redshift = ""
-
-[default.variables]
-
-[settings]
-default_target_type = "automatic"
