feat(dotter): add `foot` terminal dotfile

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,6 +5,7 @@ default_target_type = "symbolic"
 depends = []
 
 [default.files]
+foot = "~/.config/foot"
 hypr = "~/.config/hypr"
 i3 = "~/.config/i3"
 mpv = "~/.config/mpv"
