feat(dotter): add `waybar` dotfiles

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -13,3 +13,4 @@ mpv = "~/.config/mpv"
 polybar = "~/.config/polybar"
 procps = "~/.config/procps"
 redshift = "~/.config/redshift"
+waybar = "~/.config/waybar"
