feat(waybar): use japanese ideographic numerals
- Update waybar config to use japanese ideographic numerals in
  `hyprland/workspaces` module

--- a/waybar/config
+++ b/waybar/config
@@ -1,14 +1,19 @@
+/* /home/macydnah/.config/waybar/config */
+
+/* https://github.com/Alexays/Waybar/wiki/Configuration */
 {
     "layer": "top",
     "position": "top",
-    "height": 30,
+    "height": 24,
     //"width": 1280,
+    "margin": 0,
     "spacing": 3,
+    //"name": ,
     "mode": "dock",
-    //"star_hidden": true,
-    "fixed-center": true,
+    "start_hidden": false,
+    "include": [],
     "reload_style_on_change": true,
-    // Choose the order of the modules
+
     "modules-left": [
         "hyprland/workspaces"
     ],
@@ -16,39 +21,32 @@
         "hyprland/window"
     ],
     "modules-right": [
-        "mpd",
-        "idle_inhibitor",
-        "pulseaudio",
-        "network",
-        "power-profiles-daemon",
-        "cpu",
-        "memory",
-        "temperature",
-        "backlight",
-        "keyboard-state",
-        "sway/language",
-        "battery",
-        "battery#bat2",
-        "clock",
-        "tray"
+	"battery"
     ],
+
     // Modules configuration
-    // "hyprland/workspaces": {
-    //     "disable-scroll": true,
-    //     "all-outputs": true,
-    //     "warp-on-scroll": false,
-    //     "format": "{name}: {icon}",
-    //     "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
-    //         "urgent": "",
-    //         "focused": "",
-    //         "default": ""
-    //     }
-    // },
+    "hyprland/workspaces": {
+	"active-only": false,
+	"format": "{icon}",
+	"format-icons": {
+	"1": "一",
+	"2": "二",
+	"3": "三",
+	"4": "四",
+	"5": "五",
+	"6": "六",
+	"7": "七",
+	"8": "八",
+	"9": "九",
+	"10": "十",
+	"magic": "",
+	"urgent": "",
+	"focused": "",
+	"default": ""
+	},
+	"show-special": true,
+	"special-visible-only": true
+    },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
@@ -132,21 +130,19 @@
     },
     "battery": {
         "states": {
-            // "good": 95,
+	    "full": 98,
+            "good": 78,
             "warning": 30,
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
+        //"format-full": "{capacity}% {icon}",
+        "format-full": "",
         "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
+        "format-plugged": "{capacity}% {icon} ",
         "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
+        "format-good": "{capacity}% {icon}", // An empty format will hide the module
+        "format-icons": ["", "", "", "", "", "", "", "", "", ""]
     },
     "power-profiles-daemon": {
       "format": "{icon}",
