--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,12 +5,12 @@ default_target_type = "symbolic"
 depends = []
 
 [default.files]
-foot = "~/.config/foot"
-hypr = "~/.config/hypr"
-i3 = "~/.config/i3"
-mpv = "~/.config/mpv"
+foot = {type = "symbolic", target = "~/.config/foot", recurse = false}
+hypr = {type = "symbolic", target = "~/.config/hypr", recurse = false}
+i3 = {type = "symbolic", target = "~/.config/i3", recurse = false}
+mpv = {type = "symbolic", target = "~/.config/mpv", recurse = false}
 "picom.conf" = "~/.config/picom.conf"
-polybar = "~/.config/polybar"
-procps = "~/.config/procps"
-redshift = "~/.config/redshift"
-waybar = "~/.config/waybar"
+polybar = {type = "symbolic", target = "~/.config/polybar", recurse = false}
+procps = {type = "symbolic", target = "~/.config/procps", recurse = false}
+redshift = {type = "symbolic", target = "~/.config/redshift", recurse = false}
+waybar = {type = "symbolic", target = "~/.config/waybar", recurse = false}
