--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,12 +5,12 @@ default_target_type = "symbolic"
 depends = []
 
 [default.files]
-foot = {type = "symbolic", target = "~/.config/foot", recurse = false}
-hypr = {type = "symbolic", target = "~/.config/hypr", recurse = false}
-i3 = {type = "symbolic", target = "~/.config/i3", recurse = false}
-mpv = {type = "symbolic", target = "~/.config/mpv", recurse = false}
+foot = {target = "~/.config/foot", type = "symbolic", recurse = false}
+hypr = {target = "~/.config/hypr", type = "symbolic", recurse = false}
+i3 = {target = "~/.config/i3", type = "symbolic", recurse = false}
+mpv = {target = "~/.config/mpv", type = "symbolic", recurse = false}
 "picom.conf" = "~/.config/picom.conf"
-polybar = {type = "symbolic", target = "~/.config/polybar", recurse = false}
-procps = {type = "symbolic", target = "~/.config/procps", recurse = false}
-redshift = {type = "symbolic", target = "~/.config/redshift", recurse = false}
-waybar = {type = "symbolic", target = "~/.config/waybar", recurse = false}
+polybar = {target = "~/.config/polybar", type = "symbolic", recurse = false}
+procps = {target = "~/.config/procps", type = "symbolic", recurse = false}
+redshift = {target = "~/.config/redshift", type = "symbolic", recurse = false}
+waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
