feat(dotter): add `rofi` launcher dotfiles

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -13,4 +13,5 @@ mpv = {target = "~/.config/mpv", type = "symbolic", recurse = false}
 polybar = {target = "~/.config/polybar", type = "symbolic", recurse = false}
 procps = {target = "~/.config/procps", type = "symbolic", recurse = false}
 redshift = {target = "~/.config/redshift", type = "symbolic", recurse = false}
+rofi = {target = "~/.config/rofi", type = "symbolic", recurse = false}
 waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
