feat(dotter): add `yt-dlp` user config flags

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -26,4 +26,4 @@ vim = {target = "~/.config/vim", type = "symbolic", recurse = false}
 waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
 xinitrc = "~/.xinitrc"
 Xresources = "~/.Xresources"
-
+yt-dlp = {target = "~/.config/yt-dlp", type = "symbolic", recurse = false}
