feat(dotter): add `Sway` Wayland compositor conf

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -19,6 +19,7 @@ profile = "~/.profile"
 qtile = {target = "~/.config/qtile", type = "symbolic", recurse = false}
 redshift = {target = "~/.config/redshift", type = "symbolic", recurse = false}
 rofi = {target = "~/.config/rofi", type = "symbolic", recurse = false}
+sway = {target = "~/.config/sway", type = "symbolic", recurse = false}
 tmux = {target = "~/.config/tmux", type = "symbolic", recurse = false}
 vim = {target = "~/.config/vim", type = "symbolic", recurse = false}
 waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
