feat(dotter): add `.vim/vimrc` user config

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,4 +16,5 @@ procps = {target = "~/.config/procps", type = "symbolic", recurse = false}
 redshift = {target = "~/.config/redshift", type = "symbolic", recurse = false}
 rofi = {target = "~/.config/rofi", type = "symbolic", recurse = false}
 tmux = {target = "~/.config/tmux", type = "symbolic", recurse = false}
+vim = {target = "~/.config/vim", type = "symbolic", recurse = false}
 waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
