feat(dotter): add `openbox` WM user dotfiles

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -11,6 +11,7 @@ hypr = {target = "~/.config/hypr", type = "symbolic", recurse = false}
 i3 = {target = "~/.config/i3", type = "symbolic", recurse = false}
 mpv = {target = "~/.config/mpv", type = "symbolic", recurse = false}
 networkmanager-dmenu = {target = "~/.config/networkmanager-dmenu", type = "symbolic", recurse = false}
+openbox = {target = "~/.config/openbox", type = "symbolic", recurse = false}
 "picom.conf" = "~/.config/picom.conf"
 polybar = {target = "~/.config/polybar", type = "symbolic", recurse = false}
 procps = {target = "~/.config/procps", type = "symbolic", recurse = false}
