--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,6 +5,7 @@ default_target_type = "symbolic"
 depends = []
 
 [default.files]
+bashrc = "~/.bashrc"
 foot = {target = "~/.config/foot", type = "symbolic", recurse = false}
 hypr = {target = "~/.config/hypr", type = "symbolic", recurse = false}
 i3 = {target = "~/.config/i3", type = "symbolic", recurse = false}
