feat(dotter): add `~/.Xresources` user config

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -18,3 +18,5 @@ rofi = {target = "~/.config/rofi", type = "symbolic", recurse = false}
 tmux = {target = "~/.config/tmux", type = "symbolic", recurse = false}
 vim = {target = "~/.config/vim", type = "symbolic", recurse = false}
 waybar = {target = "~/.config/waybar", type = "symbolic", recurse = false}
+Xresources = "~/.Xresources"
+
