--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,6 +5,7 @@ default_target_type = "symbolic"
 depends = []
 
 [default.files]
+alacritty = {target = "~/.config/alacritty", type = "symbolic", recurse = false}
 bashrc = "~/.bashrc"
 foot = {target = "~/.config/foot", type = "symbolic", recurse = false}
 hypr = {target = "~/.config/hypr", type = "symbolic", recurse = false}
