feat(dotter): add `Qtile` WM user config

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,6 +16,7 @@ openbox = {target = "~/.config/openbox", type = "symbolic", recurse = false}
 polybar = {target = "~/.config/polybar", type = "symbolic", recurse = false}
 procps = {target = "~/.config/procps", type = "symbolic", recurse = false}
 profile = "~/.profile"
+qtile = {target = "~/.config/qtile", type = "symbolic", recurse = false}
 redshift = {target = "~/.config/redshift", type = "symbolic", recurse = false}
 rofi = {target = "~/.config/rofi", type = "symbolic", recurse = false}
 tmux = {target = "~/.config/tmux", type = "symbolic", recurse = false}
