refactor: define packages module-alike fashion
This is a big refactor. Now `global.toml` has individual definitions for
every package. Also, a couple of groups of packages to deploy a minimal
shell environment, with the `shell` package, or a minimal desktop
environment with X11 or Wayland flavors (i.e. Xorg or Wayland utilities,
grouped together with an X window manager or a Wayland compositor. Id
non est a full-featured Desktop Environment).

- Rename `default` package to `all` package. If needed, now it's
  possible to select the `all` package and get all the packages deployed

- Add `shell` `terminal` `WUtils` `X11` `XUtils` `mpv-yt` groups of
  packages

- Group wayland terminal emulators (at this moment only wayland's) in
  the `terminal` package. If you want to select only one terminal
  emulator, select an empty target in the local definition for the
  terminals you don't want deployed

- Define individual packages for multimedia apps as: `mpv` and `yt-dlp`

- Define individual packages for Wayland compositors as: `hyprland` and
  `sway`. (WIP a qtile package with Wayland backend)

- Define individual packages for X11 window managers as: `i3`, `openbox`
  and `qtile`

- Update `local.toml` to reflect the new structure of `global.toml`.
  Deploy a Hyprland environment by default

--- a/.dotter/HuaaaliP0NKH-ER0S.toml
+++ b/.dotter/HuaaaliP0NKH-ER0S.toml
@@ -1,4 +1,12 @@
 includes = []
-packages = ["default"]
+
+# Packages to deploy a Xorg environment
+#packages = ["shell", "i3", "XUtils", "mpv-yt"]
+
+# Packages to deploy a Wayland environment
+packages = ["shell", "terminal", "hyprland", "mpv-yt", "WUtils"]
 
 [files]
+"config/alacritty" = ""
+
+[variables]
