--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,12 +1,76 @@
 [settings]
 default_target_type = "symbolic"
 
-[default]
-depends = []
-
-[default.files]
-"config/alacritty" = {target = "~/.config/alacritty", type = "symbolic", recurse = false}
+[shell.files]
 "bashrc" = "~/.bashrc"
+"config/procps" = {target = "~/.config/procps", type = "symbolic", recurse = false}
+"config/tmux" = {target = "~/.config/tmux", type = "symbolic", recurse = false}
+"config/vim" = {target = "~/.config/vim", type = "symbolic", recurse = false}
+"profile" = "~/.profile"
+
+[terminal.files]
+"config/alacritty" = {target = "~/.config/alacritty", type = "symbolic", recurse = false}
+"config/foot" = {target = "~/.config/foot", type = "symbolic", recurse = false}
+
+[WUtils.files]
+"config/networkmanager-dmenu" = {target = "~/.config/networkmanager-dmenu", type = "symbolic", recurse = false}
+"config/rofi" = {target = "~/.config/rofi", type = "symbolic", recurse = false}
+"config/swayimg" = {target = "~/.config/swayimg", type = "symbolic", recurse = false}
+"config/waybar" = {target = "~/.config/waybar", type = "symbolic", recurse = false}
+
+[X11.files]
+"xinitrc" = "~/.xinitrc"
+"Xresources" = "~/.Xresources"
+
+[XUtils]
+depends = ["X11"]
+[XUtils.files]
+"config/networkmanager-dmenu" = {target = "~/.config/networkmanager-dmenu", type = "symbolic", recurse = false}
+"config/picom.conf" = "~/.config/picom.conf"
+"config/polybar" = {target = "~/.config/polybar", type = "symbolic", recurse = false}
+"config/redshift" = {target = "~/.config/redshift", type = "symbolic", recurse = false}
+"config/rofi" = {target = "~/.config/rofi", type = "symbolic", recurse = false}
+
+
+## Multimedia ##
+[mpv.files]
+"config/mpv" = {target = "~/.config/mpv", type = "symbolic", recurse = false}
+[mpv-yt]
+depends = ["mpv", "yt-dlp"]
+[yt-dlp.files]
+"config/yt-dlp" = {target = "~/.config/yt-dlp", type = "symbolic", recurse = false}
+
+
+## Wayland Compositors ##
+[hyprland.files]
+"config/hypr" = {target = "~/.config/hypr", type = "symbolic", recurse = false}
+[sway.files]
+"config/sway" = {target = "~/.config/sway", type = "symbolic", recurse = false}
+#[wqtile.files]
+#"config/qtile" = {target = "~/.config/qtile", type = "symbolic", recurse = false}
+
+
+## X Window Managers ##
+[i3]
+depends = ["X11"]
+[i3.files]
+"config/i3" = {target = "~/.config/i3", type = "symbolic", recurse = false}
+
+[openbox]
+depends = ["X11"]
+[openbox.files]
+"config/openbox" = {target = "~/.config/openbox", type = "symbolic", recurse = false}
+
+[qtile]
+depends = ["X11"]
+[qtile.files]
+"config/qtile" = {target = "~/.config/qtile", type = "symbolic", recurse = false}
+
+
+## Beware!! the 'all' package will symlink all files ##
+[all.files]
+"bashrc" = "~/.bashrc"
+"config/alacritty" = {target = "~/.config/alacritty", type = "symbolic", recurse = false}
 "config/foot" = {target = "~/.config/foot", type = "symbolic", recurse = false}
 "config/hypr" = {target = "~/.config/hypr", type = "symbolic", recurse = false}
 "config/i3" = {target = "~/.config/i3", type = "symbolic", recurse = false}
@@ -16,7 +80,6 @@ depends = []
 "config/picom.conf" = "~/.config/picom.conf"
 "config/polybar" = {target = "~/.config/polybar", type = "symbolic", recurse = false}
 "config/procps" = {target = "~/.config/procps", type = "symbolic", recurse = false}
-"profile" = "~/.profile"
 "config/qtile" = {target = "~/.config/qtile", type = "symbolic", recurse = false}
 "config/redshift" = {target = "~/.config/redshift", type = "symbolic", recurse = false}
 "config/rofi" = {target = "~/.config/rofi", type = "symbolic", recurse = false}
@@ -25,8 +88,7 @@ depends = []
 "config/tmux" = {target = "~/.config/tmux", type = "symbolic", recurse = false}
 "config/vim" = {target = "~/.config/vim", type = "symbolic", recurse = false}
 "config/waybar" = {target = "~/.config/waybar", type = "symbolic", recurse = false}
+"config/yt-dlp" = {target = "~/.config/yt-dlp", type = "symbolic", recurse = false}
+"profile" = "~/.profile"
 "xinitrc" = "~/.xinitrc"
 "Xresources" = "~/.Xresources"
-"config/yt-dlp" = {target = "~/.config/yt-dlp", type = "symbolic", recurse = false}
-
-[hypr.files]
