refactor(hyprland): make home dir a relative path

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -5,7 +5,7 @@ $mod = SUPER
 $terminal = footclient
 $floatingTerminal = footclient -a floating-foot -e tmux new-session -A -s shession
 $fileManager = pcmanfm
-$menu = /home/macydnah/.config/rofi/launcher.sh
+$menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
 
 # https://wiki.hyprland.org/Configuring/Monitors/
@@ -57,7 +57,7 @@ decoration {
     dim_strength = 0.5
     dim_special = 0.2
     dim_around = 0.4
-    # screen_shader = /home/macydnah/.config/hypr/blue-light-filter.frag
+    #screen_shader = ~/.config/hypr/blue-light-filter.frag
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -226,7 +226,7 @@ bind = $mod, XF86AudioLowerVolume, exec, pavucontrol --tab=3
 binde = ,XF86MonBrightnessUp, exec, xbacklight -inc 3 -fps 60 -time 111 -perceived
 binde = ,XF86MonBrightnessDown, exec, xbacklight -dec 3 -fps 60 -time 111 -perceived
 bind = SHIFT, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader ' '
-bind = SHIFT, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader /home/macydnah/.config/hypr/blue-light-filter.frag
+bind = SHIFT, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader ~/.config/hypr/blue-light-filter.frag
 bind = $mod, XF86MonBrightnessUp, exec, hyprctl dispatch dpms on
 bind = $mod, XF86MonBrightnessDown, exec, hyprctl dispatch dpms off
 bind = $mod, Menu, exec, kblight
