feat(waybar): add custom weather module to waybar

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -21,6 +21,7 @@
         "hyprland/window"
     ],
     "modules-right": [
+	"custom/wttr",
 	"battery"
     ],
 
@@ -194,6 +195,13 @@
         "escape": true,
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    },
+    "custom/wttr": {
+    "format": "{}°",
+    "tooltip": true,
+    "interval": 3600,
+    "exec": "~/.config/waybar/scripts/wttr.py",
+    "return-type": "json"
     }
 }
 
