--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -82,17 +82,17 @@ animations {
     first_launch_animation = false
     
     # https://wiki.hyprland.org/Configuring/Animations/
-    animation = windowsIn, 1, 4, overshot
+    animation = windowsIn, 1, 4, easeInOutExpo
     animation = windowsOut, 0, 4, default, popin 100%
     animation = windowsMove, 1, 4, easeOutExpo
-    animation = layersIn, 1, 4, easeInOutBack
+    animation = layersIn, 1, 2, easeOutCirc
     animation = layersOut, 1, 4, easeOutExpo
     animation = fade, 1, 4, default
     animation = fadeIn, 1, 3, easeInBack
     animation = fadeOut, 1, 2, easeOutExpo
     animation = fadeSwitch, 1, 2, easeOutExpo
     animation = fadeShadow, 1, 2, easeOutExpo
-    animation = fadeLayersIn, 1, 4, easeInOutBack
+    animation = fadeLayersIn, 1, 3, easeOutSine
     animation = fadeLayersOut, 1, 4, easeOutExpo
     animation = border, 0
     animation = borderangle, 0
