feat(hyprland): add `dpms` toggle keybind

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -229,6 +229,7 @@ bind = SHIFT, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shade
 bind = SHIFT, XF86MonBrightnessDown, exec, hyprctl keyword decoration:screen_shader ~/.config/hypr/blue-light-filter.frag
 bind = $mod, XF86MonBrightnessUp, exec, hyprctl dispatch dpms on
 bind = $mod, XF86MonBrightnessDown, exec, hyprctl dispatch dpms off
+bind = $mod, F7, exec, hyprctl dispatch dpms toggle
 bind = $mod, Menu, exec, kblight
 
 # Keybinds/shortcuts for applications
