--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -248,6 +248,11 @@ bind = $mod, space, togglefloating,
 bind = $mod, X, exec, togglehyprtab.sh 
 bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
 
+bind = $mod ALT CTRL SHIFT, Return, submap, clean
+submap = clean
+bind = $mod ALT CTRL SHIFT, Return, submap, reset
+submap = reset
+
 # Navigation
 bind = $mod, J, movefocus, l
 bind = $mod, semicolon, movefocus, r
