feat(hyprland): tweak `cursor` options
- Hide cursor on key press
- Use sotware cursors instead of hardware ones, as the screen shaders
  like the blue light filter ones doesn't shade hardware cursors

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -186,12 +186,13 @@ opengl {
 
 # https://wiki.hyprland.org/Configuring/Variables/#cursor
 cursor {
-    inactive_timeout = 2
+    no_hardware_cursors = true
     hotspot_padding = 5
+    inactive_timeout = 2
     no_warps = true
     persistent_warps = true
     zoom_factor = 1.000
-    hide_on_key_press = false
+    hide_on_key_press = true
 }
 
 # https://wiki.hyprland.org/Configuring/Dwindle-Layout/
