fix(hyprland.conf): do not hide mouse on keypress
It is useful while writing in LibreOffice and on Terminal emulators, but
is annoying when doing graphics like in Canva or GIMP, as there are some
chords with mouse and keyboard and then the mouse disappears. Consider
using hide on keypress functionalities at the client side, Foot terminal
does have such functionality indeed.

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -192,7 +192,7 @@ cursor {
     no_warps = true
     persistent_warps = true
     zoom_factor = 1.000
-    hide_on_key_press = true
+    hide_on_key_press = false
 }
 
 # https://wiki.hyprland.org/Configuring/Dwindle-Layout/
