--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ input {
         natural_scroll = true
         scroll_factor = 1.3
         tap_button_map = lrm
-        clickfinger_behavior = false
+        clickfinger_behavior = true
         drag_lock = true
     }
 }
