--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -129,7 +129,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
+    workspace_swipe = false
     workspace_swipe_fingers = 3
     workspace_swipe_min_fingers = true
     workspace_swipe_distance = 150
