refactor(foot): replace current nerd font
Use `Symbols Nerd Font` instead of `JetBrainsMono Nerd Font`. `yazi`
seems to get along better with the former

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,7 +1,8 @@
 # ~/.config/foot/foot.ini
 
 #font=Source Code Pro:pixelsize=13:antialias=true, Twemoji:pixelsize=13, JetBrainsMono Nerd Font:pixelsize=16
-font=SF Mono:pixelsize=13:antialias=true:style=semibold, Twemoji:pixelsize=13, JetBrainsMono Nerd Font:pixelsize=16
+#font=SF Mono:pixelsize=13:antialias=true:style=semibold, Twemoji:pixelsize=13, JetBrainsMono Nerd Font:pixelsize=16
+font=SF Mono:pixelsize=13:antialias=true:style=semibold, Twemoji:pixelsize=13, Symbols Nerd Font:pixelsize=13:antialias=true
 line-height=16px
 letter-spacing=0px
 horizontal-letter-offset=0px
