feat(hyprland): update config to `v0.45.2`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -48,16 +48,25 @@ decoration {
     rounding = 4
     active_opacity = 1.0
     inactive_opacity = 0.85
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 4
-    col.shadow = rgba(1a1a1aee)
-    col.shadow_inactive = rgba(00000000)
+    fullscreen_opacity = 1.0
     dim_inactive = false
     dim_strength = 0.5
     dim_special = 0.2
     dim_around = 0.4
     #screen_shader = ~/.config/hypr/blue-light-filter.frag
+
+    # https://wiki.hyprland.org/Configuring/Variables/#shadow
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 4
+        sharp = false
+        ignore_window = true
+        color = rgba(1a1a1aee)
+        color_inactive = rgba(00000000)
+        offset = 0, 0
+        scale = 1.0
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -200,7 +209,6 @@ dwindle {
     pseudotile = true
     force_split = 2
     preserve_split = true
-    no_gaps_when_only = 0
     use_active_for_splits = true
 
     bind = $mod, P, pseudo
