feat(hyprland): set `BROWSER` environment variable
Set to `firefox`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ env = SDL_VIDEODRIVER,wayland
 env = XDG_SESSION_TYPE,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = FLOATINGTERM,$floatingTerminal
+env = BROWSER,firefox
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
