refactor(hyprland): tweak `fadeLayersIn` animation
- Increase animation time, making it slower
- Change bezier curve to `easeInSine`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -102,7 +102,7 @@ animations {
     animation = fadeOut, 1, 2, easeOutExpo
     animation = fadeSwitch, 1, 2, easeOutExpo
     animation = fadeShadow, 1, 2, easeOutExpo
-    animation = fadeLayersIn, 1, 2, easeInCirc
+    animation = fadeLayersIn, 1, 4, easeInSine
     animation = fadeLayersOut, 1, 4, easeOutExpo
     animation = border, 0
     animation = borderangle, 0
