--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = footclient -a floating-foot -e tmux new-session -A -s shession
-$fileManager = pcmanfm
+$fileManager = $terminal yazi
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
 
