--- a/.dotter/HuaaaliP0NKH-ER0S.toml
+++ b/.dotter/HuaaaliP0NKH-ER0S.toml
@@ -1,10 +1,10 @@
 includes = []
 
 # Packages to deploy a Xorg environment
-#packages = ["shell", "i3", "XUtils", "mpv-yt"]
+#packages = ["shell", "i3", "XUtils", "mpv-yt", "tridactyl"]
 
 # Packages to deploy a Wayland environment
-packages = ["shell", "terminal", "hyprland", "mpv-yt", "WUtils"]
+packages = ["shell", "terminal", "hyprland", "WUtils", "mpv-yt", "tridactyl"]
 
 [files]
 "config/alacritty" = ""
