--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ $bar = togglewaybar.sh
 #monitor = name, resolution, position, scale, transform, 0
 monitor = ,preferred,auto,auto,transform,0
 monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
+monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
 
 exec-once = pcmanfm -d
 exec-once = foot --server
