--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -55,7 +55,7 @@ keymap = [
 	{ on = "<Delete>",  run = "remove --permanently",           desc = "Permanently delete selected files" },
 	{ on = "<Insert>",  run = "create",                         desc = "Create a file (ends with / for directories)" },
 	{ on = "r",         run = "rename --cursor=before_ext",     desc = "Rename selected file(s)" },
-	{ on = "!",         run = 'shell " ; read" --block --cursor=0  --interactive', desc = "Run a shell command (block until finishes)" },
+	{ on = ":",         run = 'shell " ; read" --block --cursor=0  --interactive', desc = "Run a shell command (block until finishes)" },
 	{ on = "<F12>",     run = 'shell "$SHELL" --block confirm', desc = "Open shell here" },
 	{ on = ".",         run = "hidden toggle",                  desc = "Toggle the visibility of hidden files" },
 	{ on = "s",         run = "search fd",                      desc = "Search files by name using fd" },
